# Ramune-ida

./: .dockerignore  .gitignore  Dockerfile  README.md  README_zh.md  hatch_build.py  pyproject.toml
docs/: web-ui.md  web-ui_zh.md  writing-plugins.md  writing-plugins_zh.md
roadmap/: IDA-MCP-Analysis.md  architecture.md  ida-mcp-review.md  next_mcp.md  server-plan.md  todo.md  web-ui.md
src/ramune_ida/: __init__.py  __main__.py  cli.py  commands.py  config.py  limiter.py  project.py  protocol.py  worker_handle.py
src/ramune_ida/core/: __init__.py
src/ramune_ida/core/analysis/: __init__.py  handlers.py  metadata.py
src/ramune_ida/core/annotate/: handlers.py
src/ramune_ida/core/data/: handlers.py  metadata.py
src/ramune_ida/core/execution/: handlers.py  metadata.py
src/ramune_ida/core/listing/: __init__.py  handlers.py  (+1 more)
src/ramune_ida/server/: app.py  files.py  output.py  plugins.py  resources.py  state.py
src/ramune_ida/web/: activity.py  app.py
src/ramune_ida/worker/: dispatch.py  main.py  pipe_io.py  socket_io.py  tags.py
tests/: bench_overview.py  mock_worker.py  test_external_plugin.py  test_func_view.py  test_mcp_tools.py  test_project.py  test_server.py  test_unit.py  test_worker_e2e.py  test_worker_real.py
tests/binary/: ch01  ch02  ch03  ch04  ch05  client  server  speed-re1
tests/plugins/echo_test/: __init__.py  metadata.py
web-ui/src/: App.tsx  index.css
web-ui/src/api/: client.ts  types.ts
web-ui/src/components/: ChannelBadge.tsx  ContextMenu.tsx  MenuBar.tsx  OverviewBar.tsx  TabTitle.tsx  Toolbar.tsx
web-ui/src/hooks/: useCodeContextMenu.ts  useGlobalShortcuts.ts
web-ui/src/panels/: ActivityStream.tsx  Decompile.tsx  Disassembly.tsx  ExportsList.tsx  FunctionList.tsx  HexView.tsx  ImportsList.tsx  LinearView.tsx  LocalTypes.tsx  NamesList.tsx  ProjectOverview.tsx  SearchPanel.tsx  SegmentsList.tsx  StringList.tsx  XrefsList.tsx
web-ui/src/stores/: activityStore.ts  projectStore.ts  viewStore.ts
web-ui/src/utils/: highlight.tsx  highlightAsm.tsx
(+12 files in other folders)
