[project]
name = "Ramune-ida"
version = "0.1.0"
description = "headless ida mcp server for rumune"
authors = [
    {name = "explorer", email = "hsadkhk@gmail.com"},
]
dependencies = [
    "mcp>=1.8.0",
    "orjson>=3.10",
    "pydantic>=2.0",
    "starlette>=0.37",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ramune-ida = "ramune_ida.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.optional-dependencies]
worker = ["idapro>=0.0.7"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
