[project]
name = "Ramune-ida"
version = "0.1.3"
description = "headless ida mcp server for rumune"
authors = [
    {name = "explorer", email = "hsadkhk@gmail.com"},
]
dependencies = [
    "mcp>=1.8.0",
    "orjson>=3.10",
    "pydantic>=2.0",
    "starlette>=0.37",
    "idapro>=0.0.7",
    "websockets>=12.0",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[project.scripts]
ramune-ida = "ramune_ida.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
artifacts = ["src/ramune_ida/web/frontend/**"]

[tool.hatch.build.hooks.custom]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]
